Added window to choose the BattleNet user, Fixed Bugs